--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "moment": "~2.10.2",
     "restangular": "~1.5.1",
-    "ngstorage": "~0.3.0"
+    "ngstorage": "~0.3.0",
+    "angular-moment": "~0.10.1"
   }
 }
